# enigma

./: Cargo.toml
models/tests/: cube.gltf  heightmap-hills-test-modifier.gltf  minecraft-player-rigged.gltf
src/: camera.rs  entity.rs  input.rs  loader.rs  main.rs  model.rs  player.rs  render.rs  settings.rs  texture.rs
src/shaders/: default.frag  default.vert
