[package]
name = "enigma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.34.0"
vulkano-win = "0.34.0"
vulkano-shaders = "0.34.0"
winit = "0.28.0"
winit_input_helper = "0.14.1"
glam = "0.25.0"
cgmath = "0.18"
gltf = "1.4.1"
png = "0.17" # For loading textures, as used in vulkano examples

# Temp debug
#nalgebra-glm = "0.19.0"

# For information on removing unused crates, 
# Crates are located in \Users\<username>\.cargo\registry